fix spacing and update comment

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ h1 {
   }
 
   h1 {
-    font-size: 36px;
+    font-size: 36gpx;
   }
 }
 
@@ -100,6 +100,7 @@ small {
   color: #BEC6C4;
 }
 
+/*  ¯\_(ツ)_/¯ */
 .unk {
   color: #ffffff;
 }
